<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desire_league">Desire League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="next">next</string>
    <string name="co_ed">Co-Ed</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league
    </string>
    <string name="get_started">get started</string>
    <string name="backgorund_baller">backgorund baller</string>
    <string name="baller">baller</string>
    <string name="beginner">beginner</string>
    <string name="finish">finish</string>
    <string name="i_am_a">I am a:</string>
    <string name="search_league">Looking for a co-ed beginner league to you. . .</string>
    <string name="background_basket">background basket</string>
</resources>
