<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/backgorund_baller"/>

    <ImageView
            android:layout_width="95dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="#fff"
            android:fontFamily="@font/montserrat" android:textSize="24sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#fff"
                android:fontFamily="@font/montserrat" android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                tools:text="beginner" android:layout_marginEnd="16dp" android:onClick="onBeginnerClick"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="#fff"
                android:fontFamily="@font/montserrat" android:textOff="@string/baller" android:textOn="@string/baller"
                tools:text="baller" android:layout_marginStart="16dp" android:onClick="onBallerClick"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skillFinishButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:background="@drawable/swoosh_button" android:textColor="#fff"
            android:fontFamily="@font/montserrat" android:layout_marginBottom="16dp"
            android:onClick="onSkillFinishClick"/>


</android.support.constraint.ConstraintLayout>